styles/Home.module.css
.container {
  padding: 0 2rem;
}

.main {
  min-height: 100vh;
  padding: 4rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* scrollbar styling */
/* body::-webkit-scrollbar {
  width: 12px;
}
body::-webkit-scrollbar-track {
  background: white;   
}
body::-webkit-scrollbar-thumb {
  background-color: #1A00BB;
  border-radius: 20px;
  border: 0.1px solid white;
} */

/* Options styling */

.searchBar {
  border: solid 1px #ccc;
  transition: 0.5s;
}

.searchBar:focus {
  transition: 0.5s;
  border: solid 1px #1A00BB;
  outline: none;
}

.searchBtn {
  background-color: #1A00BB;
  color: white;
  font-weight: 200;
  height: 2.7rem;
  width: 5rem;
  border-radius: 10px;
  transition: 0.5s;
}

.searchBtn:hover {
  background-color: #3e26da;
  transition: 0.5s;
}


.filterBtn {
  background-color: #ccc;
  height: 2.7rem;
  width: 6rem;
  border-radius: 10px;
  transition: 0.5s;
}

.filterBtn:hover {
  background-color: #1A00BB; /* rgb(176, 170, 170) */
  transition: 0.5s;
}

.filterBtn:hover .filterText {
  color: white;
  transition: 0.5s;
}

.filterText {
  color: rgb(161, 159, 159);
  transition: 0.5s;
}

.label {
  display: inline-flex;
  align-items: center;
  cursor: pointer;
  color: #394a56;
}

.labelText {
  margin-left: 16px;
}

.toggle {
  isolation: isolate;
  position: relative;
  height: 30px;
  width: 60px;
  border-radius: 15px;
  border-width: 2px;
  border-color: lightgray;
  overflow: hidden;
  /* box-shadow: */
  /*   -8px -4px 8px 0px #ffffff, */
  /*   8px 4px 12px 0px #d1d9e6, */
  /*   4px 4px 4px 0px #d1d9e6 inset, */
  /*   -4px -4px 4px 0px #ffffff inset; */
}

.toggleState {
  display: none;
}

.indicator {
  height: 100%;
  width: 200%;
  background: white;
  border-radius: 15px;
  transform: translate3d(-75%, 0, 0);
  transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
  /* box-shadow: */
  /*   -8px -4px 8px 0px #ffffff, */
  /*   8px 4px 12px 0px #d1d9e6; */
}

.toggleState:checked ~ .indicator {
  transform: translate3d(25%, 0, 0);
}

/* .switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}
.switch input { 
  opacity: 0;
  width: 0;
  height: 0;
}
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}
.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}
input:checked + .slider {
  background-color: #1A00BB;
}
input:focus + .slider {
  box-shadow: 0 0 1px #1A00BB;
}
input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}
 
.slider.round {
  border-radius: 34px;
}

/* login page styling */

.totalClicks {
  display: none;
}
.slider.round:before {
  border-radius: 50%;
}

/* batch card styling */

.batchImage {
  border-radius: 26px;
  transition: 0.5s;
}

.batchImage:hover {
  cursor: pointer;
  transition: 0.5s;
  transform: translateY(-2px);
}

.batch-container:hover .overlay {
  opacity: 1;
}

/* default stuff ig */

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
}

.card {
  margin: 1rem;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
  max-width: 300px;
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h2 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
  .searchBar {
    width: 3rem;
  }
}

